# alfa-apy-icp-canisters

./: Cargo.toml  LICENSE  README.md  canister_ids.json  dfx.json  package-lock.json  pool_stats.wasm  strategy_history.wasm
.github/workflows/: gh-pages.yml
docs/: README.md  error_codes.md  icp_swap.md  main_doc_draft.md  smart_rebalance.md  testing.md  user_interface.md
scripts/: deploy.sh
src/libraries/errors/src/: lib.rs
src/libraries/icrc_ledger_client/: Cargo.toml
src/libraries/icrc_ledger_client/src/: lib.rs  mock.rs
src/libraries/liquidity/: Cargo.toml
src/libraries/service_resolver/: Cargo.toml
src/libraries/service_resolver/src/: lib.rs
src/libraries/smart_rebalance/: Cargo.toml
src/libraries/swap/: Cargo.toml
src/libraries/yield_calculator/: Cargo.toml
src/pool_stats/: Cargo.toml  pool_stats.did
src/pool_stats/src/: lib.rs  service.rs
src/strategy_history/: Cargo.toml  build.sh  strategy_history.did
src/strategy_history/src/: lib.rs
src/strategy_history/src/repository/: mod.rs  snapshots_repo.rs  stable_state.rs  strategy_states_repo.rs
src/strategy_history/src/service/: mod.rs  strategy_history_service.rs
src/strategy_history/src/services/: mod.rs  scheduler_service.rs  strategy_history_service.rs  strategy_snapshots_service.rs  strategy_states_service.rs  strategy_yield_service.rs  test_snapshots_service.rs
src/strategy_history/src/strategy_snapshot/: mod.rs  strategy_snapshot.rs
src/strategy_history/src/types/: external_canister_types.rs  mod.rs  types.rs
src/strategy_history/src/utils/: service_resolver.rs
src/strategy_history/src/vault/: mod.rs  vault_service.rs
src/vault/: Cargo.toml  vault.did
src/vault/src/: lib.rs  service.rs
static/: README.md  index.html
test/data/: pools.ts
test/idl/: pool_stats.ts  pool_stats_idl.ts  vault.ts  vault_idl.ts
test/pool_stats/: initialize_pools-production.test.ts  pool_stats-dev.test.ts
test/util/: constants.ts  util.ts
test/vault/: vault-dev.test.ts  vault.test.ts
(+97 files in other folders)
