[package]
name = "strategy_history"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = "0.10"
ic-cdk = "0.17.1"
ic-cdk-macros = "0.17.1"
ic-cdk-timers = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }

# Shared dependencies
types = { path = "../libraries/types" }
errors = { path = "../libraries/errors" }
utils = { path = "../libraries/utils" }
validation = { path = "../libraries/validation" }

[lib]
crate-type = ["cdylib"]
